[package]
name = "finger_tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
# OpenCV bindings for camera capture and image processing
opencv = { version = "0.92", features = ["clang-runtime"] }

# GUI framework
eframe = "0.29"
egui = "0.29"
egui_extras = { version = "0.29", features = ["image"] }

# Image handling
image = "0.25"

# Linear algebra for homography
nalgebra = "0.33"

# Error handling
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"
